errors.txt
Build stalkerhek-android-arm32
failed now in 33s
Search logs
1s
1s
1s
18s
9s
Run NAME="stalkerhek-android-arm32"
CGO enabled for ARM32: CC=/home/runner/work/Stalkerheks/Stalkerheks/android-ndk-r26d/toolchains/llvm/prebuilt/linux-x86_64/bin/armv7a-linux-androideabi21-clang
# runtime/cgo
gcc_amd64.S:27:8: error: unknown token in expression
 pushq %rbx
       ^
gcc_amd64.S:27:8: error: invalid operand
 pushq %rbx
       ^
gcc_amd64.S:28:8: error: unknown token in expression
 pushq %rbp
       ^
gcc_amd64.S:28:8: error: invalid operand
 pushq %rbp
       ^
gcc_amd64.S:29:8: error: unknown token in expression
 pushq %r12
       ^
gcc_amd64.S:29:8: error: invalid operand
 pushq %r12
       ^
gcc_amd64.S:30:8: error: unknown token in expression
 pushq %r13
       ^
gcc_amd64.S:30:8: error: invalid operand
 pushq %r13
       ^
gcc_amd64.S:31:8: error: unknown token in expression
 pushq %r14
       ^
gcc_amd64.S:31:8: error: invalid operand
 pushq %r14
       ^
gcc_amd64.S:32:8: error: unknown token in expression
 pushq %r15
       ^
gcc_amd64.S:32:8: error: invalid operand
 pushq %r15
       ^
gcc_amd64.S:39:7: error: unknown token in expression
 movq %rdi, %rbx
      ^
gcc_amd64.S:39:7: error: invalid operand
 movq %rdi, %rbx
      ^
gcc_amd64.S:40:7: error: unknown token in expression
 movq %rdx, %rdi
      ^
gcc_amd64.S:40:7: error: invalid operand
 movq %rdx, %rdi
      ^
gcc_amd64.S:41:7: error: invalid token in expression
 call *%rsi
      ^
gcc_amd64.S:41:7: error: invalid operand
 call *%rsi
      ^
gcc_amd64.S:42:7: error: invalid token in expression
 call *%rbx
      ^
gcc_amd64.S:42:7: error: invalid operand
 call *%rbx
      ^
gcc_amd64.S:45:7: error: unknown token in expression
 popq %r15
      ^
gcc_amd64.S:45:7: error: invalid operand
 popq %r15
      ^
gcc_amd64.S:46:7: error: unknown token in expression
 popq %r14
      ^
gcc_amd64.S:46:7: error: invalid operand
 popq %r14
      ^
gcc_amd64.S:47:7: error: unknown token in expression
 popq %r13
      ^
gcc_amd64.S:47:7: error: invalid operand
 popq %r13
      ^
gcc_amd64.S:48:7: error: unknown token in expression
 popq %r12
      ^
gcc_amd64.S:48:7: error: invalid operand
 popq %r12
      ^
gcc_amd64.S:49:7: error: unknown token in expression
 popq %rbp
      ^
gcc_amd64.S:49:7: error: invalid operand
 popq %rbp
      ^
gcc_amd64.S:50:7: error: unknown token in expression
 popq %rbx
      ^
gcc_amd64.S:50:7: error: invalid operand
 popq %rbx
      ^
Error: Process completed with exit code 1.
0s
0s
0s

